@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-02
+2011-01-26 Andy Salnikov
+- fixed event() arguments
+
 Tag: V00-00-01
 2010-09-28 Andy Salnikov
 - first commit, just one non-functional example module which I use
